03-tenants/04-example-helloworld/source/src/manifests/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
      - name: app1
        image: quay.io/apoczeka/app-python-hello
        ports:
        - containerPort: 8080
