03-tenants/04-example-helloworld/source/src/manifests/base/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: app1
spec:
  selector:
    app: app1
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
