03-tenants/04-example-helloworld/source/src/manifests/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: app1
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: app1
    weight: 100
